--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comment-strip"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Felix Stegmaier <stegmaier.felix@gmail.com>"]
 license = "MIT"
 description = "Remove comments out of text files"
@@ -10,7 +10,7 @@ keywords = ["delete", "remove", "strip", "comments", "commandline"]
 categories = ["command-line-utilities", "text-processing"]
 
 [badges]
-travis-ci = { repository = "https://github.com/XOSplicer/comment-strip", branch = "master" }
+travis-ci = { repository = "XOSplicer/comment-strip", branch = "master" }
 
 [dependencies]
 clap = { version = "2.25.0", features = ["yaml"] }
