cargo toml include

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/XOSplicer/comment-strip"
 readme = "README.md"
 keywords = ["delete", "remove", "strip", "comments", "commandline"]
 categories = ["command-line-utilities", "text-processing"]
-exclude = ["test/"]
+include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
 
 [badges]
 travis-ci = { repository = "XOSplicer/comment-strip", branch = "master" }
