--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ edition = "2018"
 travis-ci = { repository = "XOSplicer/comment-strip", branch = "master" }
 
 [dependencies]
-clap = { version = "2.25.0", features = ["yaml"] }
-quick-error = "1.2.0"
+clap = { version = "2.33", features = ["yaml"] }
+thiserror = "1.0"
